--- a/boxfoodology/WebContent/WEB-INF/velocity/email-recovery.vm
+++ b/boxfoodology/WebContent/WEB-INF/velocity/email-recovery.vm
@@ -5,7 +5,7 @@
 		<table style="width: 100%; background: #f1f0e8; border-spacing: 0px; font-family: Helvetica Neue,Helvetica,Arial,sans-serif; font-size: 14px; line-height: 1.42857;">
 			<tr>
 				<td style="background-color: #3B5998; color: #FFF; height: 50px; text-align: center;">
-					THERA PROJECT
+					BoxFoodology
 				</td>
 			</tr>
 			<tr>
@@ -19,7 +19,7 @@
 									If you do not wish to change your password, just ignore this message.
 								</p>
 								<p>
-									Thanks,<br/>TheraProject
+									Thanks,<br/>BoxFoodology
 								</p>
 								<br/>
 							</td>
@@ -29,7 +29,7 @@
 			</tr>
 			<tr>
 				<td style="background-color: #3B5998; color: #FFF; font-size: 12px; height: 80px; text-align: center;">
-					<a href="www.theraproject.org" style="color: #FFF;">www.theraproject.org</a>
+					<a href="www.boxfoodology.com" style="color: #FFF;">www.boxfoodology.com</a>
 				</td>
 			</tr>
 		</table>
