--- a/boxfoodology/WebContent/WEB-INF/velocity/registration.vm
+++ b/boxfoodology/WebContent/WEB-INF/velocity/registration.vm
@@ -5,7 +5,7 @@
 		<table style="width: 100%; background: #f1f0e8; border-spacing: 0px; font-family: Helvetica Neue,Helvetica,Arial,sans-serif; font-size: 14px; line-height: 1.42857;">
 			<tr>
 				<td style="background-color: #3B5998; color: #FFF; height: 50px; text-align: center;">
-					THERA PROJECT
+					BoxFoodology
 				</td>
 			</tr>
 			<tr>
@@ -18,7 +18,7 @@
 									You are almost done with the registration. To confirm the validity of your e-mail address, please click the following link:	<a href="$url">$url</a>
 								</p>
 								<p>
-									Thanks,<br/>TheraProject
+									Thanks,<br/>BoxFoodology
 								</p>
 								<br/>
 							</td>
@@ -28,7 +28,7 @@
 			</tr>
 			<tr>
 				<td style="background-color: #3B5998; color: #FFF; font-size: 12px; height: 80px; text-align: center;">
-					<a href="www.theraproject.org" style="color: #FFF;">www.theraproject.org</a>
+					<a href="www.boxfoodology.com" style="color: #FFF;">www.boxfoodology.com</a>
 				</td>
 			</tr>
 		</table>
