--- a/boxfoodology/WebContent/css/custom.css
+++ b/boxfoodology/WebContent/css/custom.css
@@ -128,6 +128,7 @@ section .container {
     background-size: 100% 100%;
 	font-size: 21px;
     padding: 0 0 20px 0;
+    height: 400px;
 }
 
 .section-home-background h1 {
