--- a/boxfoodology/WebContent/css/custom.css
+++ b/boxfoodology/WebContent/css/custom.css
@@ -260,3 +260,14 @@ body {
 	transform: translateX(-100%); 
 	}
 }
+
+#notifications {
+  cursor: pointer;
+  position: fixed;
+  right: 0px;
+  z-index: 9999;
+  top: 0px;
+  margin-top: 22px;
+  margin-right: 15px;
+  max-width: 400px;   
+}
